Fix T46293: Text Editor: Convert to spaces/to tabs was totally broken with non-ASCII strings.

Code was totally unaware of UTF8, also it was needlessly complicated...